--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,10 @@ cmake_minimum_required(VERSION 2.8)
 project(SceneCompletion)
 include(CheckCXXCompilerFlag)
 enable_language(CXX)
+find_package(OpenMP)
+if (OPENMP_FOUND)
+    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+endif()
 CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
 if(COMPILER_SUPPORTS_CXX11)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
@@ -20,5 +24,7 @@ message(STATUS "    version: ${OpenCV_VERSION}")
 message(STATUS "    libraries: ${OpenCV_LIBS}")
 message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
 include_directories(${OpenCV_INCLUDE_DIR})
-add_executable(sc main.cpp)
-target_link_libraries(sc ${OpenCV_LIBS})
+add_executable(lcm lcm.cpp)
+target_link_libraries(lcm ${OpenCV_LIBS})
+add_executable(gd gd.cpp)
+target_link_libraries(gd ${OpenCV_LIBS})
