--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,8 +23,13 @@ message(STATUS "OpenCV library status:")
 message(STATUS "    version: ${OpenCV_VERSION}")
 message(STATUS "    libraries: ${OpenCV_LIBS}")
 message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
-include_directories(${OpenCV_INCLUDE_DIR})
+find_package(MPI REQUIRED)
+message(STATUS "MPI library status:")
+message(STATUS "    libraries: ${MPI_LIBRARIES}")
+message(STATUS "    include path: ${MPI_INCLUDE_PATH}")
+
+include_directories(${OpenCV_INCLUDE_DIR} ${MPI_C_INCLUDE_PATH})
 add_executable(lcm lcm.cpp)
-target_link_libraries(lcm ${OpenCV_LIBS})
+target_link_libraries(lcm ${OpenCV_LIBS} ${MPI_LIBRARIES})
 add_executable(gd gd.cpp)
-target_link_libraries(gd ${OpenCV_LIBS})
+target_link_libraries(gd ${OpenCV_LIBS} ${MPI_LIBRARIES})
