add scene completion

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,7 +24,9 @@ message(STATUS "    version: ${OpenCV_VERSION}")
 message(STATUS "    libraries: ${OpenCV_LIBS}")
 message(STATUS "    include path: ${OpenCV_INCLUDE_DIRS}")
 include_directories(${OpenCV_INCLUDE_DIR})
-add_executable(lcm lcm.cpp)
-target_link_libraries(lcm ${OpenCV_LIBS})
+#add_executable(lcm lcm.cpp)
+#target_link_libraries(lcm ${OpenCV_LIBS})
+add_executable(sc lcm.cpp sc.cpp)
+target_link_libraries(sc ${OpenCV_LIBS})
 add_executable(gd gd.cpp)
 target_link_libraries(gd ${OpenCV_LIBS})
